# ChangeLog for www-client/opera
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.384 2009/09/01 13:52:48 jer Exp $

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> opera-10.00.ebuild:
  Switch to mirror://opera now that mirrors should have synced.

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> -opera-10.00_pre4537.ebuild,
  -opera-10.00_pre4538.ebuild, -opera-10.00_pre4546.ebuild,
  -opera-10.00_pre4562.ebuild:
  Remove old.

*opera-10.00 (01 Sep 2009)

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.00.ebuild:
  Version bump
  <http://my.opera.com/community/blog/2009/08/25/the-adventures-of-odd-even>
  .

  29 Aug 2009; Jeroen Roovers <jer@gentoo.org> opera-10.10_pre4563.ebuild,
  opera-10.10_pre4566.ebuild, +files/opera-localepath.patch:
  Set proper locale path (bug #283128).

*opera-10.00_rc4583 (29 Aug 2009)

  29 Aug 2009; Jeroen Roovers <jer@gentoo.org> opera-10.00_rc4570.ebuild,
  +opera-10.00_rc4583.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2009/08/28/opera-10-0-release-candid
  ate-2>.

*opera-10.00_rc4570 (25 Aug 2009)

  25 Aug 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.00_rc4570.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2009/08/25/opera-10-0-release-candid
  ate>.

  22 Aug 2009; William Hubbs <williamh@gentoo.org> opera-9.27.ebuild,
  opera-9.64.ebuild:
  fixed dependencies for 231870.

*opera-10.10_pre4566 (21 Aug 2009)

  21 Aug 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.10_pre4566.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2009/08/21/another-unite-round>.

*opera-10.10_pre4563 (20 Aug 2009)
*opera-10.00_pre4562 (20 Aug 2009)

  20 Aug 2009; Jeroen Roovers <jer@gentoo.org> -opera-10.00_pre4402.ebuild,
  -opera-10.00_pre4492.ebuild, -opera-10.00_pre4493.ebuild,
  -opera-10.00_pre4502.ebuild, -opera-10.00_pre4520.ebuild,
  -opera-10.00_pre4529.ebuild, +opera-10.00_pre4562.ebuild,